apps/test/peerauthentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: express-test-server-mtls
  namespace: express-test
spec:
  mtls:
    mode: PERMISSIVE
