apps/test/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: express-test-server
  namespace: express-test
  labels:
    app: express-test-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: express-test-server
  template:
    metadata:
      labels:
        app: express-test-server
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
        - name: express-test-server
          image: ghcr.io/nsavinda/express-test-server:latest
          ports:
            - containerPort: 8210
