apps/test/destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: express-test-server-mtls
  namespace: express-test
spec:
  host: express-test-server.express-test.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
